# htmx-notebook

./: package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.cjs
notebook/: main.py
notebook/api/: __init__.py
notebook/api/routes/: auth.py  notes.py
notebook/api/schemas/: auth.py  users.py
notebook/app/: __init__.py  routes.py
notebook/app/models/: __init__.py  users.py
notebook/static/css/: styles.css
notebook/static/js/: main.js  utils.js
notebook/static/js/htmx_extensions/: response_target.js
notebook/templates/: dashboard.html  layout.html  login.html  register.html
notebook/templates/components/: card_note.macro  navbar.html  sidebar.html
notebook/utils/: auth.py  password.py  types.py
